OAK-10429: created IndexStoreUtils, added deprecation tag on methods and constructors